syntax = "proto3";
package password_reset;

option go_package = "nfxid/protos/gen/auth/password_reset;passwordresetpb";

import "google/protobuf/timestamp.proto";

// 密码重置交付方式枚举
enum AuthResetDelivery {
  AUTH_RESET_DELIVERY_UNSPECIFIED = 0;
  AUTH_RESET_DELIVERY_EMAIL = 1; // 邮箱
  AUTH_RESET_DELIVERY_SMS = 2;   // 短信
}

// 密码重置状态枚举
enum AuthResetStatus {
  AUTH_RESET_STATUS_UNSPECIFIED = 0;
  AUTH_RESET_STATUS_ISSUED = 1;  // 已签发
  AUTH_RESET_STATUS_USED = 2;    // 已使用
  AUTH_RESET_STATUS_EXPIRED = 3; // 已过期
  AUTH_RESET_STATUS_REVOKED = 4; // 已撤销
}

// 密码重置信息
message PasswordReset {
  string id = 1;                      // 重置ID (UUID)
  string reset_id = 2;                // 重置标识符 (varchar(255))
  string tenant_id = 3;               // 租户ID (UUID)
  string user_id = 4;                 // 用户ID (UUID)
  AuthResetDelivery delivery = 5;     // 交付方式：email, sms
  string code_hash = 6;               // 验证码哈希 (varchar(255))
  google.protobuf.Timestamp expires_at = 7;    // 过期时间
  optional google.protobuf.Timestamp used_at = 8; // 使用时间
  optional string requested_ip = 9;   // 请求IP (inet)
  optional string ua_hash = 10;       // User-Agent 哈希 (varchar(64))
  int32 attempt_count = 11;           // 尝试次数
  AuthResetStatus status = 12;        // 状态：issued, used, expired, revoked
  google.protobuf.Timestamp created_at = 13;   // 创建时间
  google.protobuf.Timestamp updated_at = 14;   // 更新时间
}

// PasswordReset 服务 - 供其他服务通过 gRPC 管理密码重置
service PasswordResetService {
  // 根据ID获取密码重置
  rpc GetPasswordResetByID (GetPasswordResetByIDRequest) returns (GetPasswordResetByIDResponse);
  
  // 根据重置ID获取密码重置
  rpc GetPasswordResetByResetID (GetPasswordResetByResetIDRequest) returns (GetPasswordResetByResetIDResponse);
  
  // 根据用户ID获取密码重置列表
  rpc GetPasswordResetsByUserID (GetPasswordResetsByUserIDRequest) returns (GetPasswordResetsByUserIDResponse);
}

// PasswordReset Service Messages
message GetPasswordResetByIDRequest {
  string id = 1;
}

message GetPasswordResetByIDResponse {
  PasswordReset password_reset = 1;
}

message GetPasswordResetByResetIDRequest {
  string reset_id = 1;
}

message GetPasswordResetByResetIDResponse {
  PasswordReset password_reset = 1;
}

message GetPasswordResetsByUserIDRequest {
  string user_id = 1;
  optional string tenant_id = 2;
}

message GetPasswordResetsByUserIDResponse {
  repeated PasswordReset password_resets = 1;
}
